...
    }

    // Set up the UI elements that aren't in the storyboard
    func setUpUI() {

        let defaultLength = defaults.integerForKey(Constants.Defaults.length)
        let doneBarButton = UIBarButtonItem(title: "Done", style: .Done, target: self, action: "dismissKeyboard")
        let spacing = UIBarButtonItem(barButtonSystemItem: .FlexibleSpace, target: self, action: nil)
        let doneBar = UIToolbar(frame: CGRectMake(0, 0, view.frame.width, 44))

        doneBar.backgroundColor = UIColor.whiteColor()
        doneBar.items = [spacing, doneBarButton]

...
    }

    // Checks and saves the entered length
    func saveCurrentLength() {

        guard let selectedLength = Int(defaultLengthTextField.text ?? "") where selectedLength <= 44 && selectedLength >= 4 else {
            showGenericAlert("Invalid Length", message: "Please make sure the length is a number between 4 and 44")
            return
        }

        defaults.setInteger(selectedLength, forKey: Constants.Defaults.length)
        defaults.synchronize()
        defaultLengthTextField.text = "\(selectedLength)"
...
